# Study-Note

./: CMakeLists.txt  GameConfig.h  GameInit.h  Players.h  README.md  http.h  main.cc  math_function.cc  pipei.csv  pipei.xlsx  script.sh  test.flv
GameDesign/: GameInit.h  Players.h
Math/: CMakeLists.txt  UtilMath.cc
Notes/: AS排坑记录.docx  DailyNote.md  DailyNote.txt  DockExp.md  FinancialPrinciple.md  LayaboxNote.md  Markdown.md  PlanNote.md  README.txt  StudyNote.md  StudyNote.txt  技术记录.docx  每日总结.xlsx
Notes/RecordFiles/: CMakeLists.txt  hello.py  main.cc  pdf_test.py  pipei.py  rec_com_doc.md  template_test.cc  test.cc  test.py  test_opencv.cc  兰州-榆中-兰州-西宁.md  毕旅（上）.md  毕旅（下）.md
OpenglApiTest/: CMakeLists.txt  README.txt  test.cc
UtilsDesign/: TemplateTest.cc
WebClientDesign/: ClientAPI.py
WebConnect/: RequestsTestHttp.py  http.h
WebServerDesign/: ServerRun.py
WebServerDesign/templates/: WebTest.html
