cmake_minimum_required(VERSION 3.4)
add_executable(main main.cc)









# cmake_minimum_required(VERSION 3.4)

# find_package(CURL REQUIRED)
# include_directories(${CURL_INCLUDE_DIR})

# add_executable(main main.cc)
# target_link_libraries(main ${CURL_LIBRARY})
# # 其中CURL_LIBRARY与CURL_INCLUDE_DIR即对应库包的路径名称需要谷歌搜索。